# mew-language

./: Cargo.toml  README.md  build.rs
.github/workflows/: build.yml
docs/: SYNTAX.md
examples/: cattime_examples.mew  hello.mew  json_example.mew  language_features.mew  length_examples.mew  mewth_examples.mew  objects_examples.mew  string_examples.mew  test.mew
res/: icon.icns
src/: error.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs  value.rs
src/cli/: commands.rs  init.rs  mod.rs  run.rs  start.rs  upgrade.rs  version.rs
