[package]
name = "mew"
version = "0.0.2"
edition = "2021"
description = "A cat-themed programming language with a runtime written in Rust"
authors = ["MewTheDev <mewisadev@gmail.com>"]
build = "build.rs"

[[bin]]
name = "mew"
path = "src/main.rs"

[dependencies]
rustyline = "15.0.0"
logos = "0.15.0"
thiserror = "2.0.12"
lazy_static = "1.5.0"
clap = { version = "4.5.38", features = ["derive"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
