[package]
name = "mew"
version = "0.0.3"
edition = "2021"
description = "A cat-themed programming language with a runtime written in Rust"
authors = ["MewTheDev <mewisadev@gmail.com>"]
build = "build.rs"

[[bin]]
name = "mew"
path = "src/main.rs"

[dependencies]
rustyline = "15.0.0"
logos = "0.15.0"
thiserror = "2.0.12"
lazy_static = "1.5.0"
clap = { version = "4.5.38", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
semver = "1.0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "0.6.6"
tempfile = "3.8.1"
dirs = "5.0.1"
bytes = "1.5.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
