[package]
name = "mew"
version = "0.0.3"
edition = "2021"
description = "A cat-themed programming language with a runtime written in Rust"
authors = ["MewTheDev <mewisadev@gmail.com>"]
build = "build.rs"

[[bin]]
name = "mew"
path = "src/main.rs"

[lib]
name = "mew_lib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
rustyline = "15.0.0"
logos = "0.15.0"
thiserror = "2.0.12"
clap = { version = "4.5.38", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
semver = "1.0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
